# hyperspyUI

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .spyderproject  .travis.yml  BindingList.py  CHANGES.rst  DEV-README.txt  FigureManager.py  FigureWrapper.py  ISSUE_TEMPLATE.md  MANIFEST  MANIFEST.in  MainWindow.py  MainWindowABC.py  MainWindowLayer1.py  MainWindowLayer2.py  ModelWrapper.py  MoveFileFolder.nsh  QDoubleSlider.py  README.rst  README.txt  Register Windows extensions.bat  SignalList.py  SignalUIWrapper.py  Singleton.py  actions.html  appveyor.yml  build_win.bat  changes.html  dev_guide.html  devguide.html  genindex.html  hyperspy_mpl_backend.py  hyperspyui-mime.xml  index.html  installation.html  launch.py  (+20 more)
.github/: ISSUE_TEMPLATE.md
_sources/: actions.rst.txt  actions.txt  changes.rst.txt  devguide.rst.txt  index.rst.txt  index.txt  installation.txt  quickstart.txt  troubleshooting.rst.txt  troubleshooting.txt
_static/: documentation_options.js  header_logo.ai
api/: hyperspyui.__main__.html  hyperspyui._elements.html  hyperspyui._tools.figuretool.html  hyperspyui._tools.gaussiantool.html  hyperspyui._tools.hometool.html  hyperspyui._tools.html  hyperspyui._tools.linetool.html  hyperspyui._tools.multiselectiontool.html  hyperspyui._tools.pointertool.html  hyperspyui._tools.selectiontool.html  hyperspyui._tools.signalfiguretool.html  hyperspyui._tools.tool.html  hyperspyui._tools.zoompan.html  hyperspyui.actionable.html  hyperspyui.advancedaction.html  hyperspyui.bindinglist.html  hyperspyui.desktop_integration.html  hyperspyui.desktop_integration_linux.html  hyperspyui.desktop_integration_windows.html  hyperspyui.exceptions.html  hyperspyui.hooksignal.html  hyperspyui.hooktraitsui.html  hyperspyui.html  hyperspyui.log.html  hyperspyui.mainwindow.html  hyperspyui.mainwindowbase.html  hyperspyui.mainwindowhyperspy.html  hyperspyui.mainwindowutillayer.html  hyperspyui.mdi_mpl_backend.html  hyperspyui.modelwrapper.html  hyperspyui.overrides.html  hyperspyui.plugincreator.html  hyperspyui.pluginmanager.html  hyperspyui.plugins.align.html  hyperspyui.plugins.alignzlp.html  hyperspyui.plugins.axesconf.html  hyperspyui.plugins.axesorderwidget.html  hyperspyui.plugins.basicsignal.html  hyperspyui.plugins.basicspectrum.html  hyperspyui.plugins.cmappicker.html  (+53 more)
dev_guide/: index.html
doc/: Makefile  conf.py  index.rst  make.bat
hyperspyui/: __init__.py  __main__.py  _elements.py  actionable.py  advancedaction.py  bindinglist.py  consolewidget.py  contrastwidget.py  dataviewwidget.py  desktop_integration.py  desktop_integration_linux.py  desktop_integration_windows.py  elementpicker.py  exceptions.py  extendedqwidgets.py  hooksignal.py  hooktraitsui.py  info.py  launch.py  log.py  main.py  mainwindow.py  mainwindowbase.py  mainwindowhyperspy.py  mainwindowlayer1.py  mainwindowlayer2.py  mainwindowlayer3.py  mainwindowlayer4.py  mainwindowlayer5.py  mainwindowutillayer.py  mdi_mpl_backend.py  modelwrapper.py  overrides.py  periodictable.py  plugin_creator.py  plugincreator.py  pluginmanager.py  qdoubleslider.py  recorder.py  settings.py  (+9 more)
images/: attribtutions.txt  power_law.ai
tests/: conftest.py  single_app.py  test_dpc_plugins.py  test_launch.py  test_mainwindow.py  test_single_application.py
upcoming_changes/: 223.maintenance.rst  224.maintenance.rst  225.maintenance.rst  226.maintenance.rst  227.maintenance.rst  229.maintenance.rst  234.maintenance.rst  236.maintenance.rst  237.maintenance.rst  241.bugfix.rst  252.enhancements.rst  253.maintenance.rst  261.bugfix.rst  262.maintenance.rst  275.maintenance.rst  276.maintenance.rst  277.enhancements.rst  278.maintenance.rst  291.enhancements.rst  (+3 more)
(+216 files in other folders)
